feat: Finished and working apis of users
